--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ font-weight: bold;
    padding-bottom: 5rem;
 }
 
-.home h2, .info h2, .story h2 {
+.home h2, .info h2, .story h2, .gallery h2 {
     color: var(--pink);
     font-family: 'Sacramento';
     font-size: 5rem;
@@ -173,12 +173,12 @@ font-weight: bold;
     font-weight: 300;
 }
 
-.story {
+.story, .gallery {
     padding-top: 10rem;
     padding-bottom: 8rem;
 }
 
-.story span {
+.story span, .gallery span {
     text-transform: uppercase;
     color: #666;
     font-size: 0.9rem;
@@ -187,7 +187,7 @@ font-weight: bold;
     margin-bottom: 1rem;
 }
 
-.story p {
+.story p, .gallery p {
     font-size: 1rem;
     font-weight: 300;
 }
@@ -298,6 +298,11 @@ font-weight: bold;
     left: -13px;
     right: auto;
 }
+
+.gallery {
+    background-color: #ffd4e6;
+}
+
 /* media query */
 
 /* extra large */
@@ -320,6 +325,37 @@ padding: 70px;
 .home .heart {
    display: none;
 }
+
+.timeline::before {
+    left: 60px;
+
+}
+.timeline li .timeline-image {
+    left: 15px;
+    margin-left: 45px;
+    top: 16px;
+
+}
+
+.timeline li .timeline-panel {
+    width: calc((100%-200px));
+    float: right;
+}
+
+.timeline li .timeline-panel::before {
+    border-left-width:0 ;
+    border-right-width:15px ;
+    left: -15px;
+    right: auto;
+}
+
+.timeline li .timeline-panel::after {
+    border-left-width:0 ;
+    border-right-width:14px ;
+    left: -13px;
+    right: auto;
+}
+
 }
 /* tablet */
 @media (max-width: 758px) {
@@ -339,6 +375,11 @@ margin: 5px;
         overflow: hidden;
     }
 
+    .timeline li .timeline-image {
+        width: 140px;
+        height: 100px;
+    }
+
 }
 /* mobile phone */
 @media (max-width: 576px) {
@@ -348,5 +389,22 @@ margin: 5px;
     .simply-countdown>.simply-section {
         padding: 45px;
         margin: 3px;
-            }
+    }
+    .timeline li .timeline-image {
+                width: 80px;
+                height: 80px;
+    }
+
+    .timeline li .timeline-panel {
+        width: 65%;
+        transform: translateX(-20px);
+    }
+    .timeline li .timeline-panel::before {
+        top: 30px;
+
+    }
+    .timeline li .timeline-panel::after {
+        top: 31px;
+        
+    }
 }
