--- a/style.css
+++ b/style.css
@@ -85,7 +85,12 @@ font-weight: bold;
    padding-bottom: 5rem;
 }
 
-.home h2, .info h2, .story h2, .gallery h2 {
+.home h2, 
+.info h2, 
+.story h2, 
+.gallery h2,
+.rsvp h2,
+.gifts h2 {
     color: var(--pink);
     font-family: 'Sacramento';
     font-size: 5rem;
@@ -173,12 +178,18 @@ font-weight: bold;
     font-weight: 300;
 }
 
-.story, .gallery {
+.story, 
+.gallery,
+.rsvp,
+.gifts
+ {
     padding-top: 10rem;
     padding-bottom: 8rem;
 }
 
-.story span, .gallery span {
+.story span, 
+.gallery span,
+.gifts span {
     text-transform: uppercase;
     color: #666;
     font-size: 0.9rem;
@@ -187,7 +198,10 @@ font-weight: bold;
     margin-bottom: 1rem;
 }
 
-.story p, .gallery p {
+.story p, 
+.gallery p,
+.rsvp p,
+.gifts p {
     font-size: 1rem;
     font-weight: 300;
 }
@@ -303,6 +317,81 @@ font-weight: bold;
     background-color: #ffd4e6;
 }
 
+.rsvp {
+    background-color: var(--bg);
+}
+.rsvp h2 {
+    font-size: 4.5rem;
+}
+
+.rsvp p {
+    color: white;
+}
+.rsvp form label {
+    color: white;
+}
+
+.rsvp button {
+    background-color: var(--pink);
+    color: white;
+    border: 1px solid var(--pink);
+}
+
+.rsvp button:hover {
+    background-color: white;
+    color: var(--pink);
+    border: 1px solid white;
+}
+
+footer {
+    padding: 3rem;
+    background-color: var(--pink);
+    color: white
+}
+footer a {
+    color: var(--bg);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: white;
+}
+
+
+footer li {
+    list-style: none;
+    display: inline;
+    margin: 0.5rem;
+}
+
+.audio-icon-wrapper {
+    width: 4rem;
+    height: 4rem;
+    font-size: 4rem;
+    position: fixed;
+    bottom: 2.5rem;
+    right: 2rem;
+    cursor: pointer;
+    color: white;
+    opacity: 0.5;
+    mix-blend-mode: difference;
+    animation: rotating 4s linear infinite;
+    transform-origin: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 0;
+}
+
+@keyframes rotating {
+    form {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
 /* media query */
 
 /* extra large */
@@ -362,9 +451,10 @@ padding: 70px;
     html{
         font-size: 65%;
     }
+
     .simply-countdown>.simply-section {
-padding: 60px;
-margin: 5px;
+    padding: 60px;
+    margin: 5px;
     }
 
     .mynavbar .nav-link {
