--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ font-weight: bold;
 }
 
 .gallery {
-    background-color: #ffd4e6;
+    background-color: #d4f3ff;
 }
 
 .rsvp {
@@ -496,5 +496,9 @@ padding: 70px;
     .timeline li .timeline-panel::after {
         top: 31px;
         
+    }
+    .mynavbar {
+        background-color: rgba(255, 255, 255, 0.3) !important;
+        backdrop-filter: none;
     }
 }
