--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(img/bunga.jpeg);
+  background-image: url(img/foto.jpg);
   z-index: -1;
   background-size: cover;
   background-position: center;
@@ -24,6 +24,7 @@ body {
 
 .hero {
   min-height: 100vh;
+  /* justify-content: flex-end; */
 }
 
 .hero h1,
@@ -403,7 +404,7 @@ footer li {
     font-size: 75%;
   }
   .simply-countdown > .simply-section {
-    padding: 70px;
+    padding: 40px;
   }
 
   .home .heart {
@@ -445,7 +446,7 @@ footer li {
   }
 
   .simply-countdown > .simply-section {
-    padding: 60px;
+    padding: 30px;
     margin: 5px;
   }
 
@@ -468,7 +469,7 @@ footer li {
     font-size: 60%;
   }
   .simply-countdown > .simply-section {
-    padding: 45px;
+    padding: 25px;
     margin: 3px;
   }
   .timeline li .timeline-image {
