--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body {
   min-height: 95vh !important;
   justify-content: flex-end;
 } */
-.judul-atas {
+/* .judul-atas {
   position: absolute;
-  top: 20px; /* atur jarak dari atas */
+  top: 20px; 
   left: 50%;
   transform: translateX(-50%);
   font-size: 3rem;
@@ -37,7 +37,7 @@ body {
   z-index: 10;
   font-family: "Sacramento", cursive;
   font-size: 6rem;
-}
+} */
 .hero {
   min-height: 100vh !important;
   position: relative; /* penting supaya absolute h1 nempel ke hero */
@@ -49,10 +49,10 @@ body {
   text-shadow: var(--shadow);
 }
 
-/* .hero h1 {
+.hero h1 {
   font-family: "Sacramento", cursive;
-  font-size: 6rem;
-} */
+  font-size: 10rem;
+}
 
 .hero h4 {
   font-size: 1.6rem;
