--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --green: #295f0ebd;
-  --bg: #295f0ebd;
+  /* --green: #295f0ebd;
+  --bg: #295f0ebd; */
   --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
 }
 
