--- a/countdown/simplyCountdown.theme.default.css
+++ b/countdown/simplyCountdown.theme.default.css
@@ -13,7 +13,7 @@
   justify-content: center;
   float: left;
   margin: 10px;
-  background: var(--green);
+  background: white;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
 }
@@ -21,8 +21,10 @@
 .simply-countdown > .simply-section .simply-word {
   display: block;
   text-align: center;
+   color: var(--green);
 }
 
 .simply-countdown > .simply-section .simply-amount {
   font-size: 1.6rem;
+  color: var(--green);
 }
