--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ body {
 
 .hero h1 {
   font-family: "Sacramento", cursive;
-  font-size: 8rem;
+  font-size: 6rem;
+  font-weight: bold; /* atau 700 */
 }
 
 .hero h4 {
@@ -98,7 +99,7 @@ body {
   background-size: cover;
   min-height: 100vh;
   margin-top: -6rem;
-  padding-top: 15rem;
+  padding-top: 10rem;
   padding-bottom: 5rem;
 }
 
@@ -119,7 +120,7 @@ body {
 }
 
 .home p {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   color: #666;
 }
 
@@ -128,9 +129,10 @@ body {
 }
 
 .home .couple h3 {
-  font-family: "Sacramento";
-  font-size: 2.4rem;
+  font-family: "Sacramento", cursive;
+  font-size: 2.8rem;
   color: var(--green);
+  font-weight: bold; /* atau 700 */
 }
 
 .home .couple img {
@@ -156,17 +158,17 @@ body {
 
 .info {
   /* background-color: var(--bg); */
-  background-image: url(img/IMG_20250920_000959.jpg);
+  background-image: url(img/coba5.jpg);
   background-size: cover; /* ukuran asli */
   /* background-repeat: no-repeat; jangan diulang */
   background-position: center; /* posisikan di tengah atas */
   /* opacity: 0.8; */
   color: white;
-  padding-top: 10rem;
-  padding-bottom: 8rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 50%;
   top: 0;
   left: 0;
   right: 50;
@@ -180,12 +182,13 @@ body {
 }
 
 .info .alamat {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
+  color: white;
 }
 
 .info .description {
-  font-size: 1rem;
-  font-weight: 300;
+  font-size: 1.1rem;
+  /* color: black; */
 }
 
 .info .card {
@@ -201,7 +204,7 @@ body {
 }
 
 .info .card-body {
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 .info .card-footer {
@@ -233,7 +236,7 @@ body {
 .gallery p,
 .rsvp p,
 .gifts p {
-  font-size: 1rem;
+  font-size: 1.4rem;
   font-weight: 300;
 }
 
@@ -459,7 +462,7 @@ footer li {
     font-size: 75%;
   }
   .simply-countdown > .simply-section {
-    padding: 40px;
+    padding: 70px;
   }
 
   .home .heart {
@@ -495,13 +498,13 @@ footer li {
   }
 }
 /* tablet */
-@media (max-width: 758px) {
+@media (max-width: 768px) {
   html {
-    font-size: 65%;
+    font-size: 80%;
   }
 
   .simply-countdown > .simply-section {
-    padding: 30px;
+    padding: 50px;
     margin: 5px;
   }
 
@@ -524,7 +527,7 @@ footer li {
     font-size: 90%;
   }
   .simply-countdown > .simply-section {
-    padding: 25px;
+    padding: 35px;
     margin: 3px;
   }
   .timeline li .timeline-image {
