--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   min-height: 95vh !important;
   justify-content: flex-end;
 } */
-/* .judul-atas {
+.judul-atas {
   position: absolute;
   top: 20px; 
   left: 50%;
@@ -37,10 +37,10 @@ body {
   z-index: 10;
   font-family: "Sacramento", cursive;
   font-size: 6rem;
-} */
+}
 .hero {
   min-height: 90vh !important;
-  /* position: relative; penting supaya absolute h1 nempel ke hero */
+  /* position: relative; */
 }
 
 .hero h1,
