--- a/style.css
+++ b/style.css
@@ -22,26 +22,32 @@ body {
   background-position: center;
 }
 
-.hero {
+/* .hero {
   min-height: 95vh !important;
   justify-content: flex-end;
-}
+} */
 .judul-atas {
   position: absolute;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 3rem;
   color: white;
   text-shadow: var(--shadow);
   z-index: 10;
   font-family: "Sacramento", cursive;
-  font-size: 6rem;
+  font-size: 5rem;
+  font-weight: bold;
 }
-/* .hero {
-  min-height: 90vh !important;
-   position: relative;
-} */
+.judul-atas p {
+  margin: 0;
+  line-height: 1;
+}
+
+.hero {
+  min-height: 100vh !important;
+  /* position: relative; penting supaya absolute h1 nempel ke hero */
+  
+}
 
 .hero h1,
 .hero h4,
@@ -57,6 +63,9 @@ body {
 
 .hero h4 {
   font-size: 1.6rem;
+  margin-top: -6rem;
+  padding-top: 10rem;
+  padding-bottom: 7rem;
 }
 
 .hero p {
@@ -66,6 +75,7 @@ body {
   color: var(--green);
   background-color: white;
   box-shadow: var(--shadow);
+  margin-top: auto;
 }
 
 .hero a:hover {
