--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
 .hero {
   min-height: 100vh !important;
   /* position: relative; penting supaya absolute h1 nempel ke hero */
-  
 }
 
 .hero h1,
@@ -65,7 +64,7 @@ body {
   font-size: 1.6rem;
   margin-top: -6rem;
   padding-top: 10rem;
-  padding-bottom: 7rem;
+  /* padding-bottom: 7rem; */
 }
 
 .hero p {
@@ -81,6 +80,9 @@ body {
 .hero a:hover {
   background-color: var(--green);
   color: white;
+  /* padding-bottom: 7rem; */
+  /* margin-bottom: 7rem;
+  padding-top: 10rem; */
 }
 
 .mynavbar {
